   https://github.com/klutometis/roxygen/pull/112 
   and A. Alfons's pull request:
   https://github.com/klutometis/roxygen/pull/30 )

- Using RCallServicesREngineWrapper to eval each expression in the environment 
  gMCP:::gMCPenv instead of the global environment.

- Some errors were catched in Java or R, but still showed up in the console.
  We now use 'try(..., silent=TRUE)' in these cases.


Changes in version 0.8-5 (18-07-2013)
=====================================

- Removed dangerous parameter seed from function rqmvnorm and calcPower.

- POSIX conforming Makefile fixes problems under Solaris.

- Fix for problems with knitr 1.3.

- Fixed: The rarly used offset parameter did not work well with the new edges 
   consisting of arcs in TikZ.

 24 files changed, 88 insertions(+), 248 deletions(-)


Changes in version 0.8-4 (15-07-2013)
=====================================

- R's base function chol for the Choleski Decomposition now defaults to LAPACK 
  in R 3.0 resulting in meaningless results for not non-negative definite 
  matrices (without any numerical tolerance! And in R devel it is by now defunct: 
  ‘chol(pivot = TRUE, LINPACK = TRUE)’ is defunct.). 
  Therefore power calculations for only semi-positive definite correlation 
  matrices could have been off under R 3.0 in previous versions.
  We switched to the singular value decomposition.

- Fixed: List of user defined power functions doesn't need to have names.

- Further work on the experimental entangled graphs feature.

- Since the vignettes were moved from gMCP/inst/doc to gMCP/vignettes
  most likely they will only be build with R >= 2.14.0.

- Moved MASS, PolynomF, multcomp, lattice, mvtnorm, Matrix, CommonJavaJars and 
  methods from DEPENDS to IMPORTS. Therefore loading gMCP will no longer add 
  these packages to the search path and if for example you want to use 
  contrMat from package multcomp you have to load/attach the package yourself.
