@@ -296,7 +296,7 @@ graph <- matrix2graph(m)
 graph <- setWeights(graph, c(1/3, 1/3, 1/3, 0, 0, 0))
 @
 
-For accessing the weights and adjacency matrix of an existing graph
+For accessing the weights and transition matrix of an existing graph
 the functions \texttt{getWeights} and \texttt{getMatrix} are provided.
 
 Let's print the newly created graph:
